--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,25 @@
   color: #f1356d;
 }
 .content {
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 20px;
+  /* max-width: 600px; */
+  /* margin: 40px auto; */
+  padding: 30px;
+}
+.blog-preview{
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+.blog-preview:hover{
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.blog-preview h2{
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+}
+.blog-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
